@@ -1,6 +1,12 @@
-2008-05-23  Peter Flanigan  <pjf@localhost>
+2008-06-02
 
-	* lib/Data/Validation.pm:
+	* Build.PL:
+
+	Made version a build requirement
+
+2008-05-23
+
+	* t/02pod.t:
 
 	Added POD tests
 
